# mimosa-ml

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_example.py  basic_examples.py  readme_example.py
mimosa/: __init__.py  data_structures.py  grid.py  hyperpost.py  io.py  kmeans.py  laplace.py  linalg.py  mixture.py  models.py  nll.py  optimisers.py  plot.py  prediction.py  sampling.py  synthetic.py
